--- a/Day1/index.html
+++ b/Day1/index.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <main>
+    <div class="left">
+      <img src="https://nerded.in/assets/laundry-image.png" width="700px" height ="700px" alt="Logo">
+    </div>
+    <div class="right">
+      <div>
+        <h1>Hello Again!</h1>
+        <p>Welcome back! we missed you!:</p>
+      </div>
+      <form action="#">
+        <br>
+        Email
+        <br>
+        <input type="text" id="email" name="email" placeholder="Email@site.com">
+        <br> 
+        <br>
+        Password
+        <br>
+        <br>
+        <input type="password" id="password" name="password" placeholder="Password">
+      </form>
+      <button> Login </button>
+      <br>
+      <br>
+      
+  <p>Not a member? <a href="#">Register Now</a></p>
+    </div>
+  </main>
+</body>
+</html>
